--- a/DOWTank/Views/TankSearch/Index.cshtml
+++ b/DOWTank/Views/TankSearch/Index.cshtml
@@ -195,7 +195,8 @@
                 {
                     "bLengthChange": false,
                     searching: false,
-                    ordering: false,
+                    ordering: true,
+                    "order": [],
                     pagination: true,
                     pageLength: 50,
                     "sDom": '<"top"flp>rt<"bottom"i><"clear">',
