--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                             <li>@Html.ActionLink("Tank History", "Index", "TankHistory")</li>
                             <li>@Html.ActionLink("Dispatch", "Index", "Dispatch")</li>
                             <li>@Html.ActionLink("Invoice", "Index", "InvoiceList")</li>
+                            <li>@Html.ActionLink("Yard", "Index", "GroundedMatrix")</li>
                         </ul>
                     </li>
                     <li><a href="javascript:void(0)">Reports</a></li>
