--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -61,5 +61,10 @@
     <script src="@Url.Content("~/Scripts/select2.min.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.datetimepicker.js")"></script>
     @RenderSection("scripts", required: false)
+    <script>
+        $(function() {
+            $('.dropdown.open .dropdown-toggle').dropdown('toggle');
+        });
+    </script>
 </body>
 </html>
